--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: azure;
+        }
+        h1{
+            color: cadetblue;
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.241);
+            padding: 5px;
+        }
+    </style>
 </head>
 <body>
     <h1>hallo dunia</h1>
-    <script src="main.js"></script>
+    <script>
+        document.title = "web-host"
+    </script>
 </body>
 </html>
